[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-zero-streams = { path = "../act-zero-streams" }
async-std = "1.8"
async-trait = "0.1"
act-zero = "0.4.0"
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
